metadata/force-app/main/default/objects/Opportunity/fields/Check_One_off_from_products_One_off__c.field-meta.xml
<CustomField>
    <fullName>Check_One_off_from_products_One_off__c</fullName>
    <description>One-off and One-off from products must match to set opportunity to stage &apos;Closed Won&apos;. Check that the contract start date has been set.</description>
    <formula>IF(
AND(
ISPICKVAL(Type,&quot;Existing Business-Professional Services&quot;),
ROUND(One_off_from_Products__c,2) = ROUND(One_off__c, 2)), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
IF( 
ROUND(One_off_from_Products__c,2) = ROUND(One_off__c, 2), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay 
Red: One-off does not match One-off from Products</inlineHelpText>
    <label>Check - One off &amp; One off from products</label>
    <type>Text</type>
</CustomField>