metadata/force-app/main/default/objects/Opportunity/fields/Check_Opportunity_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Check_Opportunity_Competitor__c</fullName>
    <formula>IF(
/* - - - - - - - - - - New Business - - - - - - - - - - */
CONTAINS(TEXT(Type), &quot;New Business&quot;),

IF( Opportunity_Competitor_Counter__c &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;)),&quot;N/A&quot; )</formula>
    <inlineHelpText>Green: Okay
Red: Enter Competitors current vendor in use</inlineHelpText>
    <label>Check Current Vendor (Competitor)</label>
    <type>Text</type>
</CustomField>