metadata/force-app/main/default/objects/Opportunity/fields/Check_Out_of_box_or_Customisation__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_of_box_or_Customisation__c</fullName>
    <description>Green: Okay
Red: Check either &quot;Out of the box&quot; or &quot;Customisation Required&quot; fields</description>
    <formula>IF(
AND(
ISPICKVAL(Solutions_Required__c,&quot;Yes&quot;),
NOT( 
OR( 
ISPICKVAL(Type, &quot;Existing Business-Renewal&quot;), 
ISPICKVAL(Sales_Office__c, &quot;San Mateo&quot;),
ISPICKVAL(Sales_Office__c, &quot;San Carlos&quot;))),
OR(AND(Out_of_the_box_Solution__c=FALSE,Customisation_Required__c=FALSE), 
AND(Out_of_the_box_Solution__c=TRUE,Customisation_Required__c=TRUE)) 
),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Check either &quot;Out of the box&quot; or &quot;Customisation Required&quot; fields</inlineHelpText>
    <label>Check - Out of the box or Customisation?</label>
    <type>Text</type>
</CustomField>