metadata/force-app/main/default/objects/Opportunity/fields/Check_Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Check_Payment_Period__c</fullName>
    <description>The Payment period is required to set an opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF( 
ISPICKVAL(Payment_Period__c,&quot;&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <inlineHelpText>The Payment period is required to set an opportunity to stage &apos;Closed Won&apos;.</inlineHelpText>
    <label>Check - Payment Period</label>
    <type>Text</type>
</CustomField>