metadata/force-app/main/default/objects/Opportunity/fields/Check_PO_Needed__c.field-meta.xml
<CustomField>
    <fullName>Check_PO_Needed__c</fullName>
    <formula>IF( 
ISBLANK(TEXT(Account.PO_Needed__c)), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 

IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <label>Check - PO Needed?</label>
    <type>Text</type>
</CustomField>