metadata/force-app/main/default/objects/Opportunity/fields/Check_Products_added__c.field-meta.xml
<CustomField>
    <fullName>Check_Products_added__c</fullName>
    <description>Products are required to set opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF( 
(of_opportunity_products__c&gt;0), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Add products</inlineHelpText>
    <label>Check - Products added</label>
    <type>Text</type>
</CustomField>