metadata/force-app/main/default/objects/Opportunity/fields/Check_Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Check_Renewal_Term__c</fullName>
    <description>Please add a renewal term.</description>
    <formula>IF( 
OR( 
Contract_Renewal_Term__c = 0, 
ISBLANK(Contract_Renewal_Term__c)),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Please add a contract renewal term.</inlineHelpText>
    <label>Check - Renewal Term</label>
    <type>Text</type>
</CustomField>