metadata/force-app/main/default/objects/Opportunity/fields/Check_Solutions_Required__c.field-meta.xml
<CustomField>
    <fullName>Check_Solutions_Required__c</fullName>
    <description>Solutions Required cannot be blank when setting opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF( 
OR(
AND(
NOT(OR(ISPICKVAL(Sales_Office__c, &quot;San Mateo&quot;),ISPICKVAL(Sales_Office__c, &quot;San Carlos&quot;))),
ISBLANK(TEXT(Solutions_Required__c)),
One_off__c &gt; 0),
AND(
NOT(OR(ISPICKVAL(Sales_Office__c, &quot;San Mateo&quot;),ISPICKVAL(Sales_Office__c, &quot;San Carlos&quot;))),
ISBLANK(TEXT(Solutions_Required__c)),
ISPICKVAL(Type,&quot;New Business-Enterprise Cloud&quot;))),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <inlineHelpText>Green: Okay
Red: Select a value in the &apos;Solutions Required&apos; field</inlineHelpText>
    <label>Check - Solutions Required</label>
    <type>Text</type>
</CustomField>