metadata/force-app/main/default/objects/Opportunity/fields/Check_Use__c.field-meta.xml
<CustomField>
    <fullName>Check_Use__c</fullName>
    <description>Use Case is required to set opportunity to stage &apos;Closed Won&apos;.</description>
    <formula>IF(NOT(ISBLANK(TEXT(Use_Case__c))), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;))</formula>
    <inlineHelpText>Use Case is required to set opportunity to stage &apos;Closed Won&apos;.</inlineHelpText>
    <label>Check - Use Case Selected</label>
    <type>Text</type>
</CustomField>