metadata/force-app/main/default/objects/Opportunity/fields/Check_Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Check_Win_Reason__c</fullName>
    <description>Indicates whether the Primary Win Reason and Win Reason Detail are entered or not.</description>
    <formula>IF( 
OR(
WinReasonEntered__c = FALSE,
ISBLANK(TEXT(Primary_Win_Reason__c))),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRcW&quot;, &quot;NO&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: Okay
Red: Please select Primary Win Reason and enter Win Reason Detail.</inlineHelpText>
    <label>Check - Win Reason</label>
    <type>Text</type>
</CustomField>