metadata/force-app/main/default/objects/Opportunity/fields/Churn_ARR__c.field-meta.xml
<CustomField>
    <fullName>Churn_ARR__c</fullName>
    <formula>Churn__c * 12</formula>
    <label>Churn ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>