metadata/force-app/main/default/objects/Opportunity/fields/Churn_ARR_Platform_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Churn_ARR_Platform_Transfer__c</fullName>
    <formula>Churn_Platform_churn__c * 12</formula>
    <label>Churn ARR: Platform Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>