metadata/force-app/main/default/objects/Opportunity/fields/Churn_Platform_churn__c.field-meta.xml
<CustomField>
    <fullName>Churn_Platform_churn__c</fullName>
    <description>Platform churn counted when customer changes from one platform to the other (eg Webdam to Bynder), but does not leave the Bynder Group.</description>
    <inlineHelpText>Platform churn counted when customer changes from one platform to the other (eg Webdam to Bynder), but does not leave the Bynder Group.</inlineHelpText>
    <label>Churn: Platform Transfer</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>