metadata/force-app/main/default/objects/Opportunity/fields/Close_Date_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_in_the_past__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that is used for the process. If a close date of one or more related opportunities is in the past, then it sets to &quot;True&quot; and helps with avoiding triggering a validation rule.</description>
    <label>Close Date in the past</label>
    <type>Checkbox</type>
</CustomField>