metadata/force-app/main/default/objects/Opportunity/fields/Closed_Won_Finance__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary checkbox for sales order process. To be replaced with a status &quot;Closed Won - Financial Review&quot;</description>
    <inlineHelpText>Temporary checkbox for sales order process. To be replaced with a status &quot;Closed Won - Financial Review&quot;</inlineHelpText>
    <label>Closed Won - Finance</label>
    <type>Checkbox</type>
</CustomField>