metadata/force-app/main/default/objects/Opportunity/fields/Company_Background__c.field-meta.xml
<CustomField>
    <fullName>Company_Background__c</fullName>
    <inlineHelpText>Please provide information on the company including Revenue, HQ Location and industry details.</inlineHelpText>
    <label>Company Background</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>