metadata/force-app/main/default/objects/Opportunity/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>TEXT(Account.Company_Size_New__c)</formula>
    <label>Company Size</label>
    <type>Text</type>
</CustomField>