metadata/force-app/main/default/objects/Opportunity/fields/Conga_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Date__c</fullName>
    <description>Sets date in YYMMDD format for Conga output file names.</description>
    <formula>RIGHT(TEXT(YEAR(TODAY())),2) 

&amp; LPAD(TEXT(MONTH(TODAY())),2,&quot;0&quot;) 

&amp; LPAD(TEXT(DAY(TODAY())),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Date</label>
    <type>Text</type>
</CustomField>