metadata/force-app/main/default/objects/Opportunity/fields/Conga_Discount_percentage_ARR__c.field-meta.xml
<CustomField>
    <fullName>Conga_Discount_percentage_ARR__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <formula>IF( Conga_Package_Default_price_ARR__c &gt;  Conga_Package_Total_price_ARR__c , ROUND((((Conga_Package_Total_price_ARR__c - Conga_Package_Default_price_ARR__c)/Conga_Package_Default_price_ARR__c)*100),0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Discount percentage ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>