metadata/force-app/main/default/objects/Opportunity/fields/Conga_Offer_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Offer_expiry_date__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <inlineHelpText>When does this discount offer expire?</inlineHelpText>
    <label>SpotDraft Offer expiry date</label>
    <type>Date</type>
</CustomField>