metadata/force-app/main/default/objects/Opportunity/fields/Conga_Onboarding_Package_Content__c.field-meta.xml
<CustomField>
    <fullName>Conga_Onboarding_Package_Content__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <label>SpotDraft Onboarding Package Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>