metadata/force-app/main/default/objects/Opportunity/fields/Conga_Package_Discount_on_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Conga_Package_Discount_on_Order_Form__c</fullName>
    <inlineHelpText>Choose yes to show the total actual discount given incl. package level discount &amp; any other discounts added</inlineHelpText>
    <label>Show Package Discount on Quote/Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>