metadata/force-app/main/default/objects/Opportunity/fields/Conga_Package_Total_price_One_off__c.field-meta.xml
<CustomField>
    <fullName>Conga_Package_Total_price_One_off__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <label>Conga Package Total price One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>