metadata/force-app/main/default/objects/Opportunity/fields/Contract_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Contract_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract IsActive</label>
    <type>Checkbox</type>
</CustomField>