metadata/force-app/main/default/objects/Opportunity/fields/Contract_Length_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_Ratio__c</fullName>
    <description>BODEV-4163 Calculates the Contract Length Ratio = Upsell and New Business of the Opportunity
This field calculates the proportion of the current opportunity’s contract duration relative to the original (primary) contract duration [FOR STEP-UP Deals]</description>
    <formula>IF(
ISPICKVAL(Type, &quot;Existing Business-Upsell&quot;),
/* For Upsell, if the Related Primary Deal exists and its Contract Duration is valid, calculate ratio */
IF(
AND(
NOT(ISBLANK(Related_Primary_Deal__c)),
NOT(ISBLANK(Related_Primary_Deal__r.Netsuite_Term__c)),
Related_Primary_Deal__r.Netsuite_Term__c &gt; 0
),
(Netsuite_Term__c / Related_Primary_Deal__r.Netsuite_Term__c),
1
),
/* For New Business Enterprise Cloud and Renewal, always return 1 */
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the proportion of the current opportunity’s contract duration relative to the original (primary) contract duration [FOR STEP-UP Deals]</inlineHelpText>
    <label>Contract Length Ratio</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>