metadata/force-app/main/default/objects/Opportunity/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <formula>DATE(
    YEAR(Startdate_contract__c) +
    FLOOR((Netsuite_Term__c + MONTH(Startdate_contract__c)) / 12) -
    IF (MOD(MONTH(Startdate_contract__c) + Netsuite_Term__c, 12) = 0,
        1,
        0),

    MOD((Netsuite_Term__c + MONTH(Startdate_contract__c) - 1), 12) + 1,

    DAY(Startdate_contract__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>