metadata/force-app/main/default/objects/Opportunity/fields/Contract_Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Term__c</fullName>
    <description>The number of months in the renewal contract. e.g. contract 2 will be for 24 months.</description>
    <inlineHelpText>The number of months in the renewal contract. e.g. contract 2 will be for 24 months.</inlineHelpText>
    <label>Contract Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>