metadata/force-app/main/default/objects/Opportunity/fields/Contraction_ARR__c.field-meta.xml
<CustomField>
    <fullName>Contraction_ARR__c</fullName>
    <formula>Contraction__c * 12</formula>
    <label>Contraction ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>