metadata/force-app/main/default/objects/Opportunity/fields/Counted_for_Contracted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Counted_for_Contracted_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag if the opportunity ARR is counted for &apos;Contracted ARR&apos; calculation on account.</description>
    <label>Counted for Contracted ARR</label>
    <type>Checkbox</type>
</CustomField>