metadata/force-app/main/default/objects/Opportunity/fields/COVID_19__c.field-meta.xml
<CustomField>
    <fullName>COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box if we have lost this revenue due to COVID-19 specifically.</description>
    <inlineHelpText>Please tick this box if we have lost this revenue due to COVID-19 specifically and specify in the Loss Reason Detail field</inlineHelpText>
    <label>COVID-19</label>
    <type>Checkbox</type>
</CustomField>