metadata/force-app/main/default/objects/Opportunity/fields/Create_Referral_Order__c.field-meta.xml
<CustomField>
    <fullName>Create_Referral_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-4133: Used to enable or disable the automatic order creation after closing the referral opportunity.</description>
    <inlineHelpText>Check this field to automatically generate order on closing referral opportunity.</inlineHelpText>
    <label>Create Referral Order?</label>
    <type>Checkbox</type>
</CustomField>