metadata/force-app/main/default/objects/Opportunity/fields/Created_by_Team__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Team__c</fullName>
    <formula>CreatedBy.Sales_Team__c</formula>
    <label>Created by Team</label>
    <type>Text</type>
</CustomField>