metadata/force-app/main/default/objects/Opportunity/fields/CRMGAC__Placeholder1__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Placeholder1__c</fullName>
    <label>Placeholder1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>