metadata/force-app/main/default/objects/Opportunity/fields/CRMGAC__Placeholder2__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Placeholder2__c</fullName>
    <label>Placeholder2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>