metadata/force-app/main/default/objects/Opportunity/fields/CS_Qualifier_Opp__c.field-meta.xml
<CustomField>
    <fullName>CS_Qualifier_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Qualifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>