metadata/force-app/main/default/objects/Opportunity/fields/Culture1__c.field-meta.xml
<CustomField>
    <fullName>Culture1__c</fullName>
    <description>Culture field used for Conga Composer</description>
    <formula>CASE(CurrencyIsoCode,&quot;EUR&quot;,&quot;fr-FR&quot;,&quot;USD&quot;,&quot;en-US&quot;,&quot;GBP&quot;,&quot;en-UK&quot;,&quot;NZD&quot;,&quot;en-NZ&quot;,&quot;CAD&quot;,&quot;en-CA&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Culture</label>
    <type>Text</type>
</CustomField>