metadata/force-app/main/default/objects/Opportunity/fields/Cumulative_Indexation_amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Indexation_amount__c</fullName>
    <description>Used to store the cumulative indexation amount added to product pricing.</description>
    <formula>IF(Pricing_factors_applied__c &amp;&amp; NOT(ISBLANK(Applied_Cumulative_Indexation__c)),
/* -- Initial Default Price ARR will be 0 in few closed opps as the initial default price is not updated on OLI&apos;s, in that case Original Renewal ARR is used for calculation -- */

IF(Initial_Default_Price_ARR__c =0, Original_Renewal_ARR__c ,Initial_Default_Price_ARR__c)
* Applied_Cumulative_Indexation__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indexation amount calculated based on (Original Renewal ARR * Applied Cumulative Indexation %) which is added to product pricing.</inlineHelpText>
    <label>Cumulative Indexation amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>