metadata/force-app/main/default/objects/Opportunity/fields/Currency_Text__c.field-meta.xml
<CustomField>
    <fullName>Currency_Text__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Currency Text</label>
    <type>Text</type>
</CustomField>