metadata/force-app/main/default/objects/Opportunity/fields/current_user__c.field-meta.xml
<CustomField>
    <fullName>current_user__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current user</label>
    <type>Text</type>
</CustomField>