metadata/force-app/main/default/objects/Opportunity/fields/Current_User_Department__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Department__c</fullName>
    <formula>$User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Department</label>
    <type>Text</type>
</CustomField>