metadata/force-app/main/default/objects/Opportunity/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Opportunities</relationshipLabel>
    <relationshipName>Referral_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>