metadata/force-app/main/default/objects/Opportunity/fields/Customer_Legal_Signer__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person whose name will be on the contract</inlineHelpText>
    <label>Customer Legal Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Customer Legal Signer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>