metadata/force-app/main/default/objects/Opportunity/fields/Customer_Legal_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Signer_Email__c</fullName>
    <formula>Customer_Legal_Signer__r.Email</formula>
    <label>Customer Legal Signer Email</label>
    <type>Text</type>
</CustomField>