metadata/force-app/main/default/objects/Opportunity/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>BO-1214: Used for prioritising the jira tickets associated with the opportunity and mapped to the fields in Jira.(Servicerocket Connector)</description>
    <formula>TEXT(Account.Customer_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>