metadata/force-app/main/default/objects/Opportunity/fields/Customisation_Required__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to show whether there is custom development involved in the SOW / opportunity.</description>
    <inlineHelpText>Is there custom development involved in the SOW for the Opportunity?</inlineHelpText>
    <label>Customisation Required</label>
    <type>Checkbox</type>
</CustomField>